use the asciidoc syntax

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,8 @@
-jbossRefApp
-===========
+== jbossRefApp
+
 
 This jbossRefApp repo is composed of demo applications that show technical JBoss behaviours on several aspects:
+
 - EJB
 - JPA
 - JMS
